<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/linkEditText"
        android:hint="@string/Enter_file_link"
        android:textSize="25sp"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/downloadButton"
        android:text="@string/download"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <Button
        android:enabled="false"
        android:id="@+id/sendButton"
        android:text="@string/sendFile"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>